# corevoikko

./: .gitignore  LICENSE  README  README.md  SECURITY.md  codeql-buildscript.sh
libvoikko/: .gitignore  COPYING  ChangeLog  LICENSE.CORE  Makefile.am  README  TODO  autogen.sh  configure.ac  libvoikko.files  libvoikko.vcproj
libvoikko/cl/: Makefile.am  analyze.lisp  constants.lisp  general.lisp  headers.lisp  options.lisp  packages.lisp  spell.lisp  voikko.asd
libvoikko/cs/: Makefile.am  Packages.mdproj  libvoikko.sln
libvoikko/cs/libvoikko/: Analysis.cs  ByteArray.cs  Dictionary.cs  GrammarError.cs  Sentence.cs  SentenceStartType.cs  SuggestionStrategy.cs  Test.cs  Token.cs  TokenType.cs  Voikko.cs  VoikkoDictionary.cs  VoikkoException.cs  libvoikko.csproj
libvoikko/cs/libvoikko.tests/: Test.cs  libvoikko.tests.csproj
libvoikko/data/: gchelp.xml
libvoikko/data/autocorrect/: fi_FI.xml
libvoikko/doc/: morphological-analysis.txt  oikoluku-korjausehdotukset.txt
libvoikko/java/: .classpath  .project  Makefile.am  pom.xml
libvoikko/js/: build.sh  commonjs-footer.js  configure.sh  libvoikko_api.js  qunit.html
libvoikko/msvc/: Makefile.am  libvoikko.sln  libvoikko.vcproj  libvoikko.vcxproj  libvoikko.vcxproj.filters  voikkogc.vcproj  voikkogc.vcxproj  voikkogc.vcxproj.filters  voikkohyphenate.vcproj  voikkohyphenate.vcxproj  voikkohyphenate.vcxproj.filters  voikkospell.vcproj  voikkospell.vcxproj  voikkospell.vcxproj.filters
libvoikko/python/: ApertiumIcelandicTest.py  DeprecatedApiTest.py  ExtendedMorphologyTest.py  NullComponentTest.py  README.md  Utf8ApiTest.py  libvoikko.py  libvoikkoNew.py  libvoikkoNewTest.py  libvoikkoOldTest.py  libvoikkotests.py  setup.py
libvoikko/src/: Makefile.am  gcanalysis.c  gcanalysis.h  gccache.c  gccache.h  gcerror.c  gcerror.h  grammar.c  libvoikko.pc.in  porting.c  porting.h  sentence.c  voikko.h  voikko_charset.c  voikko_charset.h  voikko_defines.h  voikko_defs.h  voikko_deprecated.h  voikko_enums.h  voikko_hyphenate.c  voikko_hyphenate.h  voikko_setup.c  voikko_setup.h  voikko_spell.c  voikko_spell.h  voikko_structs.h  voikko_suggest.c  voikko_suggest.h  voikko_tokenize.c  voikko_utils.c  voikko_utils.h  voikkogc.1  voikkogc.c  voikkohyphenate.c  voikkospell.1  voikkospell.c
libvoikko/src/autocorrect/: AutoCorrect.cpp  AutoCorrect.hpp  TrieNode.hpp  triecompiler.py
libvoikko/src/character/: SimpleChar.cpp  SimpleChar.hpp  charset.cpp  charset.hpp
libvoikko/src/compatibility/: interface.cpp
libvoikko/src/fst/: Configuration.cpp  Configuration.hpp  Transducer.cpp  Transducer.hpp  Transition.hpp  UnweightedTransducer.cpp  UnweightedTransducer.hpp  WeightedConfiguration.cpp  WeightedConfiguration.hpp  WeightedTransducer.cpp  WeightedTransducer.hpp  WeightedTransition.hpp
libvoikko/src/grammar/: Analysis.cpp  Analysis.hpp  CacheEntry.cpp  CacheEntry.hpp  CgGrammarChecker.cpp  CgGrammarChecker.hpp  CgRuleEngine.cpp  CgRuleEngine.hpp  FinnishAnalysis.cpp  FinnishAnalysis.hpp  FinnishGrammarChecker.cpp  FinnishGrammarChecker.hpp  FinnishRuleEngine.cpp  FinnishRuleEngine.hpp  GcCache.cpp  GcCache.hpp  GrammarChecker.cpp  GrammarChecker.hpp  GrammarCheckerFactory.cpp  GrammarCheckerFactory.hpp  HfstAnalysis.cpp  HfstAnalysis.hpp  NullGrammarChecker.cpp  NullGrammarChecker.hpp  Paragraph.cpp  Paragraph.hpp  RuleEngine.cpp  RuleEngine.hpp  Sentence.cpp  Sentence.hpp  Token.hpp  VoikkoGrammarError.cpp  VoikkoGrammarError.hpp  analysis.cpp  analysis.hpp  cache.cpp  cache.hpp  cachesetup.cpp  cachesetup.hpp  checks.cpp  (+6 more)
libvoikko/src/hyphenator/: AnalyzerToFinnishHyphenatorAdapter.cpp  AnalyzerToFinnishHyphenatorAdapter.hpp  HfstHyphenator.cpp  HfstHyphenator.hpp  Hyphenator.cpp  Hyphenator.hpp  HyphenatorFactory.cpp  HyphenatorFactory.hpp  hyphenator.cpp  hyphenator.hpp  interface.cpp
libvoikko/src/morphology/: Analysis.cpp  Analysis.hpp  Analyzer.cpp  Analyzer.hpp  AnalyzerFactory.cpp  AnalyzerFactory.hpp  FinnishVfstAnalyzer.cpp  FinnishVfstAnalyzer.hpp  HfstAnalyzer.cpp  HfstAnalyzer.hpp  LttoolboxAnalyzer.cpp  LttoolboxAnalyzer.hpp  MalagaAnalyzer.cpp  MalagaAnalyzer.hpp  NullAnalyzer.cpp  NullAnalyzer.hpp  VfstAnalyzer.cpp  VfstAnalyzer.hpp  interface.cpp
libvoikko/src/sentence/: Sentence.cpp  Sentence.hpp  interface.cpp  sentence.cpp
libvoikko/src/setup/: BackendProperties.cpp  BackendProperties.hpp  Dictionary.cpp  Dictionary.hpp  DictionaryException.cpp  DictionaryException.hpp  DictionaryFactory.cpp  DictionaryFactory.hpp  DictionaryLoader.cpp  DictionaryLoader.hpp  LanguageTag.cpp  LanguageTag.hpp  V2DictionaryLoader.cpp  V2DictionaryLoader.hpp  V3DictionaryLoader.cpp  V3DictionaryLoader.hpp  V4DictionaryLoader.cpp  V4DictionaryLoader.hpp  V5DictionaryLoader.cpp  V5DictionaryLoader.hpp  interface.cpp  setup.cpp  setup.hpp
libvoikko/src/spellchecker/: AnalyzerToSpellerAdapter.cpp  AnalyzerToSpellerAdapter.hpp  FinnishSpellerTweaksWrapper.cpp  FinnishSpellerTweaksWrapper.hpp  FixedResultSpeller.cpp  FixedResultSpeller.hpp  HfstSpeller.cpp  HfstSpeller.hpp  HfstSuggestion.cpp  HfstSuggestion.hpp  SpellUtils.cpp  SpellUtils.hpp  SpellWithPriority.cpp  SpellWithPriority.hpp  Speller.cpp  Speller.hpp  SpellerCache.cpp  SpellerCache.hpp  SpellerFactory.cpp  SpellerFactory.hpp  VfstSpeller.cpp  VfstSpeller.hpp  VfstSuggestion.cpp  VfstSuggestion.hpp  spell.cpp  spell.hpp  suggestions.cpp  suggestions.hpp
libvoikko/src/tokenizer/: Tokenizer.cpp  Tokenizer.hpp  interface.cpp  tokenizer.cpp
libvoikko/src/tools/: Makefile.am  voikkogc.1  voikkogc.cpp  voikkohyphenate.1  voikkohyphenate.cpp  voikkospell.1  voikkospell.cpp  voikkovfstc.1  voikkovfstc.cpp
libvoikko/src/utf8/: checked.hpp  core.hpp  unchecked.hpp  utf8.hpp
libvoikko/src/utils/: StringUtils.cpp  StringUtils.hpp  utils.cpp  utils.hpp
libvoikko/test/: AllAutomaticTests.py  AllAutomaticTests.sh  DeprecatedApiTest.py  DictionaryInfoTest.py  Makefile.am  NullComponentTest.py  TestUtils.py  Utf8ApiTest.py  libvoikkoOldTest.py  libvoikkoTest.py  python3Test.sh
libvoikko/test/hfst/: MeadowMariTest.py  (+1 more)
libvoikko/typescript/: README.md  libvoikko.d.ts
(+1153 files in other folders)
