SUBDIRS = src src/tools

EXTRA_DIST = data/autocorrect/fi_FI.xml data/autocorrect/autocorrect.dtd \
    python/libvoikko.py python/libvoikkotests.py \
    python/ExtendedMorphologyTest.py \
    python/Utf8ApiTest.py \
    doc/morphological-analysis.txt \
    doc/oikoluku-korjausehdotukset.txt \
    autogen.sh \
    libvoikko.vcproj

ACLOCAL_AMFLAGS = -I m4

