SUBDIRS = src src/tools msvc test

EXTRA_DIST = data/autocorrect/fi_FI.xml data/autocorrect/autocorrect.dtd \
    python/libvoikko.py \
    python/libvoikkoOld.py \
    python/ExtendedMorphologyTest.py \
    python/Utf8ApiTest.py \
    python/DeprecatedApiTest.py \
    python/ApertiumIcelandicTest.py \
    doc/morphological-analysis.txt \
    doc/oikoluku-korjausehdotukset.txt \
    autogen.sh

ACLOCAL_AMFLAGS = -I m4

