EXTRA_DIST = Packages.mdproj \
libvoikko/Analysis.cs \
libvoikko/ByteArray.cs \
libvoikko/GrammarError.cs \
libvoikko/Sentence.cs \
libvoikko/SentenceStartType.cs \
libvoikko/SuggestionStrategy.cs \
libvoikko/Token.cs \
libvoikko/TokenType.cs \
libvoikko/Voikko.cs \
libvoikko/VoikkoDictionary.cs \
libvoikko/VoikkoException.cs \
libvoikko/libvoikko.csproj \
libvoikko.sln \
libvoikko.tests/Test.cs \
libvoikko.tests/libvoikko.tests.csproj
