EXTRA_DIST = pom.xml \
    src/main/java/org/puimula/libvoikko/Sentence.java \
    src/main/java/org/puimula/libvoikko/Dictionary.java \
    src/main/java/org/puimula/libvoikko/Token.java \
    src/main/java/org/puimula/libvoikko/SentenceStartType.java \
    src/main/java/org/puimula/libvoikko/SuggestionStrategy.java \
    src/main/java/org/puimula/libvoikko/VoikkoException.java \
    src/main/java/org/puimula/libvoikko/Analysis.java \
    src/main/java/org/puimula/libvoikko/TokenType.java \
    src/main/java/org/puimula/libvoikko/Libvoikko.java \
    src/main/java/org/puimula/libvoikko/package-info.java \
    src/main/java/org/puimula/libvoikko/ByteArray.java \
    src/main/java/org/puimula/libvoikko/GrammarError.java \
    src/main/java/org/puimula/libvoikko/Voikko.java \
    src/test/java/org/puimula/libvoikko/VoikkoTest.java \
    src/test/java/org/puimula/libvoikko/VoikkoJnaLatinTest.java

